<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:iconSpaceReserved="false"
        android:key="tutorial"
        android:title="@string/preference_tutorial" />

    <ListPreference
        app:iconSpaceReserved="false"
        android:entries="@array/country_labels"
        android:entryValues="@array/country_values"
        android:key="country"
        android:defaultValue="USA"
        android:title="@string/preference_country_title" />

    <androidx.preference.SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        android:defaultValue="false"
        android:key="dailyNotification"
        android:summary="@string/preference_dailyNotification_summary"
        android:title="@string/preference_dailyNotification_title" />

    <Preference
        app:iconSpaceReserved="false"
        android:key="share"
        android:title="@string/preference_share" />

    <Preference
        app:iconSpaceReserved="false"
        android:key="about"
        android:title="@string/preference_about" />
</PreferenceScreen>